@@ -27,6 +27,7 @@ requires "YAML::Tiny" => "1.62";
 requires "namespace::autoclean" => "0.19";
 requires "perl" => "5.010001";
 requires "strictures" => "1.004004";
+requires "warnings::illegalproto" => "0.001002";
 recommends "CSS::LESS" => "v0.0.3";
 
 on 'build' => sub {
