@@ -1,35 +1,36 @@
 name = App-Doh
 
 [Prereqs]
-perl              = 5.010001
-namespace::autoclean = 0.19
-strictures        = 1.004004
-App::Ack          = 2.12
-Class::Usul       = v0.45.0
-Crypt::Eksblowfish = 0.009
-Daemon::Control   = 0.000009
-Exporter::Tiny    = 0.026
-File::DataClass   = v0.43.0
-HTML::Accessors   = v0.11.0
-HTTP::Body        = 1.11
-HTTP::Message     = 6.06
-Module::Pluggable = 5.1
-Moo               = 1.004
-Plack             = 1.0018
+perl                   = 5.010001
+namespace::autoclean   = 0.19
+strictures             = 1.004004
+warnings::illegalproto = 0.001002
+App::Ack               = 2.12
+Class::Usul            = v0.45.0
+Crypt::Eksblowfish     = 0.009
+Daemon::Control        = 0.000009
+Exporter::Tiny         = 0.026
+File::DataClass        = v0.43.0
+HTML::Accessors        = v0.11.0
+HTTP::Body             = 1.11
+HTTP::Message          = 6.06
+Module::Pluggable      = 5.1
+Moo                    = 1.004
+Plack                  = 1.0018
 Plack::Middleware::Deflater  = 0.08
 Plack::Middleware::LogErrors = 0.001
 Plack::Middleware::Session   = 0.21
-Pod::Xhtml        = 1.61
-Starman           = 0.3000
-Template          = 2.22
-Text::MultiMarkdown = 1.000034
-Try::Tiny         = 0.18
-Type::Tiny        = 0.046
-URI               = 1.60
-Web::Simple       = 0.020
-Unexpected        = v0.23.0
-XML::Simple       = 2.18
-YAML::Tiny        = 1.62
+Pod::Xhtml             = 1.61
+Starman                = 0.3000
+Template               = 2.22
+Text::MultiMarkdown    = 1.000034
+Try::Tiny              = 0.18
+Type::Tiny             = 0.046
+URI                    = 1.60
+Web::Simple            = 0.020
+Unexpected             = v0.23.0
+XML::Simple            = 2.18
+YAML::Tiny             = 1.62
 
 [Prereqs / ConfigureRequires]
 version           = 0.88
