@@ -17,7 +17,7 @@ with    q(App::Doh::Role::Preferences);
 has '+moniker'    => default => 'help';
 
 has 'excluding'   => is => 'ro', isa => ArrayRef, builder => sub {
-   [ qw( Attributes Auth Functions Markdown Model Role View ) ] };
+   [ qw( Attributes Auth Functions Markdown Model Role Session View ) ] };
 
 # Private attributes
 has '_navigation' => is => 'lazy', isa => ArrayRef, builder => sub {
