@@ -493,7 +493,7 @@ table tr th:last-child, table tr td:last-child {
 }
 .well.well-sidebar select {
    background-color: @sidebar-hover; .border-radius;
-   font-size: 14px; line-height: 18px;
+   font-size: 14px; .opacity(0.7); line-height: 18px;
 }
 
 /* Media queries */
